distrbuted the library packages and worked on the sync functionality to print file name, type, and last modified date

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,16 @@
 [workspace]
 resolver = "3"
-members = ["cli", "crates"]
+members = ["cli", "crates/*"]
 
 [workspace.dependencies]
 clap = { version = "4.5.47", features = ["derive"] }
+time = { version = "0.3.44", features = ["local-offset", "macros", "formatting"] }
+walkdir = "2.5.0"
 
 [workspace.package]
 edition = "2024"
 repository = "https://github.com/ibilalkayy/cover"
-version = "0.1.0"
+version = "0.1.1"
 license = "Apache-2.0"
 readme = "README.md"
 categories = ["command-line-utilities"]
