--- a/crates/sync/Cargo.toml
+++ b/crates/sync/Cargo.toml
@@ -10,3 +10,6 @@ categories.workspace = true
 [dependencies]
 walkdir.workspace = true
 time.workspace = true
+tempfile.workspace = true
+os_pipe.workspace = true
+libc.workspace = true
