--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,12 @@ members = ["cli", "crates/*"]
 
 [workspace.dependencies]
 clap = { version = "4.5.47", features = ["derive"] }
+walkdir = "2.5.0"
 
 [workspace.package]
 edition = "2024"
 repository = "https://github.com/ibilalkayy/cover"
-version = "0.1.11"
+version = "0.1.12"
 license = "Apache-2.0"
 readme = "README.md"
 categories = ["command-line-utilities"]
