--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,6 +6,7 @@ version.workspace = true
 license.workspace = true
 readme.workspace = true
 categories.workspace = true
+version.workspace = true
 
 [dependencies]
 clap.workspace = true
