added the description

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "cli"
+description.workspace = true
 edition.workspace = true
 repository.workspace = true
 version.workspace = true
