--- a/crates/cover_files/Cargo.toml
+++ b/crates/cover_files/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cover"
+name = "cover-files"
 description.workspace = true
 edition.workspace = true
 repository.workspace = true
